--- a/app/src/main/res/layout/item_tags_popular.xml
+++ b/app/src/main/res/layout/item_tags_popular.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="10dp">
+
     <TextView
         android:id="@+id/tag_name"
         android:layout_width="wrap_content"
         android:layout_height="30sp"
-         android:text="Item1"
-        android:textSize="20sp"/>
+        android:text="Item1"
+        android:textSize="20sp" />
+
     <TextView
+        android:id="@+id/tag_popularity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10000"
-        android:textSize="20sp"
         android:layout_weight="1"
         android:gravity="right"
-        android:id="@+id/tag_popularity"
-        />
+        android:text="10000"
+        android:textSize="20sp" />
 </LinearLayout>
