--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,26 +7,29 @@
     android:orientation="vertical"
 
     tools:context=".LocationActivity">
-    <Button android:id="@+id/back"
+
+    <Button
+        android:id="@+id/back"
         android:layout_width="50sp"
         android:layout_height="50sp"
-        android:text="Back!"
-        android:onClick="onBack" />
+        android:onClick="onBack"
+        android:text="Back!" />
+
     <fragment
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/google_map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/userLayout"
         android:layout_width="match_parent"
         android:layout_height="75sp"
-        android:background = "@drawable/rounded_button"
         android:layout_marginLeft="20sp"
-        android:layout_marginRight="20sp"
         android:layout_marginTop="10sp"
+        android:layout_marginRight="20sp"
+        android:background="@drawable/rounded_button"
         android:orientation="horizontal"
         android:visibility="invisible">
 
@@ -53,8 +54,8 @@
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:layout_gravity="center|end"
-            android:layout_weight="0"
             android:layout_marginRight="20sp"
+            android:layout_weight="0"
             android:src="@drawable/matches" />
 
     </LinearLayout>
