--- a/app/src/main/res/layout/activity_matches.xml
+++ b/app/src/main/res/layout/activity_matches.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,33 +11,36 @@
         android:orientation="vertical"
 
         android:padding="5sp">
-        <Button android:id="@+id/back"
+
+        <Button
+            android:id="@+id/back"
             android:layout_width="50sp"
             android:layout_height="50sp"
-            android:text="Back!"
-            android:onClick="onBack" />
+            android:onClick="onBack"
+            android:text="Back!" />
 
         <ImageView
+            android:id="@+id/locationButton"
             android:layout_width="match_parent"
             android:layout_height="60sp"
-            android:padding="4sp"
-            android:text="LOC"
-            android:id="@+id/locationButton"
-            android:src="@drawable/location"
             android:layout_marginTop="10sp"
-            android:layout_marginBottom="10sp"/>
+            android:layout_marginBottom="10sp"
+            android:padding="4sp"
+            android:src="@drawable/location"
+            android:text="LOC" />
+
         <Button
+            android:id="@+id/allMatches"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="all"
-            android:background = "@drawable/rounded_button"
             android:layout_margin="5sp"
-            android:id="@+id/allMatches"/>
+            android:background="@drawable/rounded_button"
+            android:text="all" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tagsRecyclerViewMatches"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/tagsRecyclerViewMatches"/>
+            android:layout_height="match_parent" />
 
 
     </LinearLayout>
@@ -46,39 +48,40 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
->
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="#all "
-        android:textSize="25sp"
-        android:paddingTop="10sp"
-        android:id="@+id/sortByText"
+        <TextView
+            android:id="@+id/sortByText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10sp"
+            android:text="#all "
+            android:textSize="25sp"
 
-        />
+            />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="5sp"
             android:text="Messages:"
-            android:textSize="15sp"
-            android:paddingTop="5sp"/>
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="5sp">
+            android:textSize="15sp" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="5sp">
 
-            android:scrollbars="vertical">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-        </androidx.recyclerview.widget.RecyclerView>
+                android:scrollbars="vertical">
 
-    </androidx.core.widget.NestedScrollView>
+            </androidx.recyclerview.widget.RecyclerView>
+
+        </androidx.core.widget.NestedScrollView>
     </LinearLayout>
 
 </LinearLayout>
