--- a/app/src/main/res/layout/activity_pop.xml
+++ b/app/src/main/res/layout/activity_pop.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutId"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PopActivity"
     android:background="@drawable/pop_bg"
     android:orientation="vertical"
-    android:id="@+id/layoutId">
+    tools:context=".PopActivity">
 
 
     <TextView
         android:id="@+id/topTextView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="3"
         android:gravity="center"
         android:text="You have new match!"
-        android:textSize="30sp"
         android:textColor="@android:color/black"
-        android:layout_weight="3"
-        />
+        android:textSize="30sp" />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profileImage"
         android:layout_width="match_parent"
