--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,97 +4,106 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="false">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".ProfileActivity"
-    android:orientation="vertical">
-    <Button android:id="@+id/back"
-        android:layout_width="50sp"
-        android:layout_height="50sp"
-        android:text="Back!"
-        android:onClick="onBack" />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_weight="20"
-        android:paddingBottom="5sp"
-        android:orientation="horizontal">
-    <androidx.viewpager.widget.ViewPager
-        android:layout_width="match_parent"
-        android:layout_height="500sp"
-        android:id="@+id/viewPager"
-        android:background="@drawable/profile_default">
-    </androidx.viewpager.widget.ViewPager>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:gravity="bottom"
-    android:layout_marginBottom="10sp"
-    >
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:id="@+id/delImage"
-        android:src="@drawable/delete_picture"
-        android:layout_weight="1"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:layout_weight="1"
-        android:textSize="12sp"
-        android:text="Set as default"
-        android:src="@drawable/set_profile"
-        android:id="@+id/setDefaultButton"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:id="@+id/addImage"
-        android:src="@drawable/add_picture"
-        android:layout_weight="1"/>
-</LinearLayout>
-     </RelativeLayout>
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="2"
-        android:padding="10sp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Your name:"
-            android:textSize="12sp"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/name"
-        android:hint="Name"
-        android:maxLength="15"
-        android:inputType="textPersonName"
-        android:layout_marginBottom="20sp"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Your description:"
-            android:textSize="12sp"/>
-       <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/description"
+        tools:context=".ProfileActivity">
 
-        android:hint="Description"
-        android:gravity="top"
-        android:layout_marginBottom="20sp"
-        android:maxLength="200"
-        android:maxLines="10"
-        />
+        <Button
+            android:id="@+id/back"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
+            android:onClick="onBack"
+            android:text="Back!" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_weight="20"
+            android:orientation="horizontal"
+            android:paddingBottom="5sp">
+
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="500sp"
+                android:background="@drawable/profile_default"></androidx.viewpager.widget.ViewPager>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10sp"
+                android:gravity="bottom"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/delImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="50sp"
+                    android:layout_weight="1"
+                    android:src="@drawable/delete_picture" />
+
+                <ImageView
+                    android:id="@+id/setDefaultButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="50sp"
+                    android:layout_weight="1"
+                    android:src="@drawable/set_profile"
+                    android:text="Set as default"
+                    android:textSize="12sp" />
+
+                <ImageView
+                    android:id="@+id/addImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="50sp"
+                    android:layout_weight="1"
+                    android:src="@drawable/add_picture" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:orientation="vertical"
+            android:padding="10sp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Your name:"
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20sp"
+                android:hint="Name"
+                android:inputType="textPersonName"
+                android:maxLength="15" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Your description:"
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_marginBottom="20sp"
+                android:gravity="top"
+                android:hint="Description"
+                android:maxLength="200"
+                android:maxLines="10" />
+        </LinearLayout>
+
     </LinearLayout>
-
-</LinearLayout>
 </ScrollView>
