--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,122 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".RegistrationActivity"
-android:orientation="vertical"
-    android:padding="50sp">
-    <Button android:id="@+id/back"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="50sp"
+    tools:context=".RegistrationActivity">
+
+    <Button
+        android:id="@+id/back"
         android:layout_width="50sp"
         android:layout_height="50sp"
-        android:text="Back!"
-        android:onClick="onBack" />
+        android:onClick="onBack"
+        android:text="Back!" />
+
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Please fill all the informations"
-        android:id="@+id/title"
-        android:textSize="15sp"
         android:gravity="center"
-        android:paddingBottom="20sp"/>
+        android:hint="Please fill all the informations"
+        android:paddingBottom="20sp"
+        android:textSize="15sp" />
 
     <TextView
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name:"
-        android:textSize="12sp"/>
+        android:textSize="12sp" />
 
     <EditText
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Name"
-        android:id="@+id/name"
         android:layout_marginBottom="10sp"
-        android:paddingTop="2sp"
-        />
+        android:hint="Name"
+        android:inputType="textPersonName"
+        android:paddingTop="2sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Date of birth:"
-        android:textSize="12sp"/>
+        android:textSize="12sp" />
 
     <EditText
+        android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="DD/MM/YYYY"
         android:ems="10"
+        android:hint="DD/MM/YYYY"
         android:inputType="date"
-        android:id="@+id/date"
-        android:paddingTop="2sp"/>
+        android:paddingTop="2sp" />
+
     <TextView
-        android:layout_marginTop="10sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10sp"
         android:text="Gender:"
-        android:textSize="12sp"/>
+        android:textSize="12sp" />
+
     <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/radioGroup"
-        android:orientation="horizontal"
         android:layout_marginTop="0sp"
-        android:layout_marginBottom="10sp">
+        android:layout_marginBottom="10sp"
+        android:orientation="horizontal">
+
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Male"/>
+            android:text="Male" />
+
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Female"/>
+            android:text="Female" />
     </RadioGroup>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Email:"
-        android:textSize="12sp"/>
+        android:textSize="12sp" />
+
     <EditText
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:hint="Email"
-        android:id="@+id/email"
         android:layout_marginBottom="10sp"
-        android:paddingTop="2sp"/>
+        android:hint="Email"
+        android:inputType="text"
+        android:paddingTop="2sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Password:"
-        android:textSize="12sp"/>
-<EditText
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="Password"
-    android:id="@+id/password"
-    android:inputType="textPassword"
-    android:paddingTop="2sp"/>
+        android:textSize="12sp" />
 
     <EditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:paddingTop="2sp" />
+
+    <EditText
+        android:id="@+id/repeatpassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Repeat password"
-        android:id="@+id/repeatpassword"
-        android:inputType="textPassword"/>
-<Button
-    android:layout_marginTop="10sp"
-    android:layout_gravity="center"
-    android:layout_width="150sp"
-    android:layout_height="30sp"
-    android:text="Register"
-    android:id="@+id/register"
-    android:background = "@drawable/rounded_button"
-    />
+        android:inputType="textPassword" />
+
+    <Button
+        android:id="@+id/register"
+        android:layout_width="150sp"
+        android:layout_height="30sp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10sp"
+        android:background="@drawable/rounded_button"
+        android:text="Register" />
 
 </LinearLayout>
