--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,92 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="false"
     tools:context=".SettingsActivity">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="600sp"
-    android:padding="20sp"
-    android:orientation="vertical">
-    <Button android:id="@+id/back"
-        android:layout_width="50sp"
-        android:layout_height="50sp"
-        android:text="Back!"
-        android:onClick="onBack" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date of birth:"
-        android:textSize="12sp"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="DD/MM/YYYY"
-        android:ems="10"
-        android:inputType="date"
-        android:id="@+id/date"
-        android:paddingTop="2sp"/>
-
-    <Switch
-        android:id="@+id/mapLocationSwitch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Show my location on map"
-        android:layout_marginBottom="10sp"
-        android:layout_marginTop="10sp"/>
-
-    <Switch
-        android:id="@+id/sortUsersByDistance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Sort users by distance"
-        android:layout_marginBottom="10sp"
-        android:layout_marginTop="10sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="bottom"
-        android:gravity="bottom"
+        android:layout_height="600sp"
         android:orientation="vertical"
-        android:padding="10sp"
-       >
+        android:padding="20sp">
 
         <Button
-            android:layout_width="200sp"
+            android:id="@+id/back"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
+            android:onClick="onBack"
+            android:text="Back!" />
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
+            android:text="Date of birth:"
+            android:textSize="12sp" />
+
+        <EditText
+            android:id="@+id/date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="DD/MM/YYYY"
+            android:inputType="date"
+            android:paddingTop="2sp" />
+
+        <Switch
+            android:id="@+id/mapLocationSwitch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
             android:layout_marginBottom="10sp"
-            android:background="@drawable/rounded_button"
-            android:text="Restart matches"
-            android:id="@+id/restartMatches"/>
+            android:text="Show my location on map" />
 
-
-        <Button
-            android:id="@+id/logoutUser"
-            android:layout_width="200sp"
+        <Switch
+            android:id="@+id/sortUsersByDistance"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
+            android:layout_marginTop="10sp"
             android:layout_marginBottom="10sp"
-            android:background="@drawable/rounded_button"
-            android:text="SignOut" />
+            android:text="Sort users by distance" />
 
-        <Button
-            android:id="@+id/deleteUser"
-            android:layout_width="200sp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
-            android:background="@drawable/rounded_button"
-        android:layout_marginBottom="10sp"
-            android:text="Delete account"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:orientation="vertical"
+            android:padding="10sp">
 
-            />
+            <Button
+                android:id="@+id/restartMatches"
+                android:layout_width="200sp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|bottom"
+                android:layout_marginBottom="10sp"
+                android:background="@drawable/rounded_button"
+                android:text="Restart matches" />
 
+
+            <Button
+                android:id="@+id/logoutUser"
+                android:layout_width="200sp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|bottom"
+                android:layout_marginBottom="10sp"
+                android:background="@drawable/rounded_button"
+                android:text="SignOut" />
+
+            <Button
+                android:id="@+id/deleteUser"
+                android:layout_width="200sp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|bottom"
+                android:layout_marginBottom="10sp"
+                android:background="@drawable/rounded_button"
+                android:text="Delete account"
+
+                />
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
 </ScrollView>
