--- a/app/src/main/res/layout/fragment_tags_manager.xml
+++ b/app/src/main/res/layout/fragment_tags_manager.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Tags.TagsManagerFragment">
@@ -10,176 +10,184 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="5sp"
-        android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="10sp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="My tags: "
-            android:textSize="12sp"
-            android:layout_weight="50"/>
-        <TextView
-            android:layout_marginRight="22sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Gender: "
-            android:textSize="12sp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Age: "
-            android:textSize="12sp"
-            android:layout_marginRight="17sp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Distance: "
-            android:gravity="center"
-            android:textSize="12sp"
-            android:layout_weight="1"/>
-        <TextView
-            android:gravity="right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Delete: "
-            android:textSize="12sp"
-            android:layout_weight="0"/>
-
-
-    </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/tagsRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#EEEAEAEA"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="bottom"
-            android:gravity="bottom"
-            android:layout_weight="0"
-            android:paddingTop="10sp"
-            android:paddingBottom="10sp"
-            >
+        android:orientation="vertical"
+        android:padding="5sp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            >
+            android:paddingBottom="10sp">
 
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Tag name:"
-                android:id="@+id/tagsEditText"
-                android:maxLines="1"
-                android:maxLength="15"
-                android:singleLine="true"
-                android:layout_weight="5"/>
-            <Button
-                android:layout_width="60sp"
-                android:layout_height="30sp"
-                android:text="ADD"
-                android:id="@+id/addButton"
+                android:layout_weight="50"
+                android:text="My tags: "
+                android:textSize="12sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="22sp"
                 android:layout_weight="1"
-                android:background = "@drawable/rounded_button"
-                />
+                android:text="Gender: "
+                android:textSize="12sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="17sp"
+                android:layout_weight="1"
+                android:text="Age: "
+                android:textSize="12sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Distance: "
+                android:textSize="12sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:gravity="right"
+                android:text="Delete: "
+                android:textSize="12sp" />
+
 
         </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Looking for: "
-        android:textSize="20sp"
-      />
 
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/radioGroup"
-        android:orientation="horizontal"
-        android:layout_marginTop="10sp"
-        android:layout_marginBottom="10sp">
-        <RadioButton
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tagsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#EEEAEAEA" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Male"/>
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Female"/>
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Any"/>
-    </RadioGroup>
+            android:layout_gravity="bottom"
+            android:layout_weight="0"
+            android:gravity="bottom"
+            android:orientation="vertical"
+            android:paddingTop="10sp"
+            android:paddingBottom="10sp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ageRangeTextView"
-        android:text="Age range: "
-        android:textSize="20sp"
-        android:paddingBottom="10sp"
-        />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-    <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
-        android:id="@+id/ageRangeSeeker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:corner_radius="10"
-        app:min_value="18"
-        app:max_value="99"
-        app:gap="1"
-        app:bar_color="#8990C4"
-        app:bar_highlight_color="#2434AD"
-        app:left_thumb_color="#1A246D"
-        app:right_thumb_color="#1A246D"
-        app:left_thumb_color_pressed="#030B47"
-        app:right_thumb_color_pressed="#030B47"
-        app:data_type="_integer"/>
+                <EditText
+                    android:id="@+id/tagsEditText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:hint="Tag name:"
+                    android:maxLength="15"
+                    android:maxLines="1"
+                    android:singleLine="true" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="Max distance:"
-        android:paddingTop="10sp"
-        android:paddingBottom="10sp"
-        android:id="@+id/maxDistanceTextView"/>
+                <Button
+                    android:id="@+id/addButton"
+                    android:layout_width="60sp"
+                    android:layout_height="30sp"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded_button"
+                    android:text="ADD" />
 
-    <com.crystal.crystalrangeseekbar.widgets.CrystalSeekbar
-        android:id="@+id/distanceSeeker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:min_value="1"
-        app:max_value="1000"
-        app:position="left"
-        app:bar_color="#8990C4"
-        app:bar_highlight_color="#2434AD"
-        app:left_thumb_color="#1A246D"
-        app:left_thumb_color_pressed="#030B47"
-        app:data_type="_integer"
-        android:paddingTop="10sp"/>
+            </LinearLayout>
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Looking for: "
+                android:textSize="20sp" />
+
+            <RadioGroup
+                android:id="@+id/radioGroup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10sp"
+                android:layout_marginBottom="10sp"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Male" />
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Female" />
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Any" />
+            </RadioGroup>
+
+            <TextView
+                android:id="@+id/ageRangeTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10sp"
+                android:text="Age range: "
+                android:textSize="20sp" />
+
+            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
+                android:id="@+id/ageRangeSeeker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:bar_color="#8990C4"
+                app:bar_highlight_color="#2434AD"
+                app:corner_radius="10"
+                app:data_type="_integer"
+                app:gap="1"
+                app:left_thumb_color="#1A246D"
+                app:left_thumb_color_pressed="#030B47"
+                app:max_value="99"
+                app:min_value="18"
+                app:right_thumb_color="#1A246D"
+                app:right_thumb_color_pressed="#030B47" />
+
+            <TextView
+                android:id="@+id/maxDistanceTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="10sp"
+                android:paddingBottom="10sp"
+                android:text="Max distance:"
+                android:textSize="20sp" />
+
+            <com.crystal.crystalrangeseekbar.widgets.CrystalSeekbar
+                android:id="@+id/distanceSeeker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="10sp"
+                app:bar_color="#8990C4"
+                app:bar_highlight_color="#2434AD"
+                app:data_type="_integer"
+                app:left_thumb_color="#1A246D"
+                app:left_thumb_color_pressed="#030B47"
+                app:max_value="1000"
+                app:min_value="1"
+                app:position="left" />
+
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
