--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,62 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="top"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="10sp"
-    android:paddingRight="10sp"
-    android:paddingTop="10sp"
-    android:paddingBottom="10sp"
+    android:layout_gravity="top"
+    android:clipToPadding="false"
     android:outlineProvider="bounds"
-    android:clipToPadding="false">
+    android:paddingLeft="10sp"
+    android:paddingTop="10sp"
+    android:paddingRight="10sp"
+    android:paddingBottom="10sp">
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        app:cardCornerRadius="10dp"
         android:elevation="2dp"
-        android:id="@+id/cardView">
+        app:cardCornerRadius="10dp">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:orientation="vertical">
-
-        <ImageView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="500sp"
-            android:layout_weight="1"
-            android:id="@+id/image"
-            android:scaleType="centerCrop"/>
-        <TextView
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
-            android:id="@+id/name"
-            android:textSize="30sp"
-            android:paddingLeft="20sp"
-            android:textColor="@android:color/black"
-            android:gravity="center_vertical|left"
-            tools:text="name"
-            android:layout_weight="0.075"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/tags"
-        android:textSize="30sp"
-        android:paddingLeft="20sp"
-        android:paddingBottom="15sp"
-        android:textColor="@android:color/black"
-        android:gravity="center_vertical"
-        tools:text="tags"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="500sp"
+                android:layout_weight="1"
+                android:scaleType="centerCrop" />
+
+            <TextView
+
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.075"
+                android:gravity="center_vertical|left"
+                android:paddingLeft="20sp"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"
+                tools:text="name" />
+
+            <TextView
+                android:id="@+id/tags"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:paddingLeft="20sp"
+                android:paddingBottom="15sp"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"
+                tools:text="tags" />
 
 
-</LinearLayout>
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
