--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -22,12 +22,12 @@
 
         <TextView
             android:id="@+id/message"
-            android:textSize="15sp"
             android:layout_width="17dp"
             android:layout_height="wrap_content"
             android:paddingTop="5sp"
             android:paddingBottom="0sp"
-            android:text="Text" />
+            android:text="Text"
+            android:textSize="15sp" />
 
 
     </LinearLayout>
