--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -17,38 +16,37 @@
         app:civ_border_width="5dp"
         app:civ_border_color="#000000"
        />-->
-    <com.mikhaellopez.circularimageview.CircularImageView
+    <com.mikhaellopez.circularimageview.CircularImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/MatchImage"
         android:layout_width="55sp"
         android:layout_height="55sp"
         android:src="@drawable/picture_default"
-        android:id="@+id/MatchImage"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
 
         app:civ_border_width="3dp" />
 
     <LinearLayout
-    android:paddingLeft="10sp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-   >
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="10sp">
 
 
-    <TextView
-        android:paddingBottom="5sp"
-        android:textSize="20sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Match's Name"
-        android:layout_gravity="center"
-        android:id="@+id/MatchName"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="lastMessage"
-        android:layout_gravity="center"
-        android:maxLines="1"
-        android:id="@+id/lastMessage"/>
+        <TextView
+            android:id="@+id/MatchName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingBottom="5sp"
+            android:text="Match's Name"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/lastMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:maxLines="1"
+            android:text="lastMessage" />
 
     </LinearLayout>
 </LinearLayout>
