--- a/app/src/main/res/layout/item_matches_tags.xml
+++ b/app/src/main/res/layout/item_matches_tags.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="0sp">
+
     <Button
+        android:id="@+id/itemTagButton"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="tag1"
-        android:textSize="10sp"
-        android:id="@+id/itemTagButton"
         android:layout_margin="5sp"
-        android:background = "@drawable/rounded_button"
-        />
+        android:background="@drawable/rounded_button"
+        android:text="tag1"
+        android:textSize="10sp" />
 </LinearLayout>
