--- a/app/src/main/res/layout/item_tags.xml
+++ b/app/src/main/res/layout/item_tags.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="10dp">
+
     <TextView
         android:id="@+id/myTags"
         android:layout_width="wrap_content"
         android:layout_height="30sp"
-         android:text="Item1"
-        android:textSize="20sp"/>
+        android:text="Item1"
+        android:textSize="20sp" />
 </LinearLayout>
