--- a/app/src/main/res/layout/fragment_tags_manager.xml
+++ b/app/src/main/res/layout/fragment_tags_manager.xml
@@ -152,17 +152,17 @@
                 android:id="@+id/ageRangeSeeker"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:bar_color="#8990C4"
-                app:bar_highlight_color="#2434AD"
+                app:bar_color="#D3D3D3"
+                app:bar_highlight_color="#808080"
                 app:corner_radius="10"
                 app:data_type="_integer"
                 app:gap="1"
-                app:left_thumb_color="#1A246D"
-                app:left_thumb_color_pressed="#030B47"
+                app:left_thumb_color="#4E4E4E"
+                app:left_thumb_color_pressed="#272727"
                 app:max_value="99"
                 app:min_value="18"
-                app:right_thumb_color="#1A246D"
-                app:right_thumb_color_pressed="#030B47" />
+                app:right_thumb_color="#4E4E4E"
+                app:right_thumb_color_pressed="#272727" />
 
             <TextView
                 android:id="@+id/maxDistanceTextView"
@@ -178,11 +178,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="10sp"
-                app:bar_color="#8990C4"
-                app:bar_highlight_color="#2434AD"
+                app:bar_color="#D3D3D3"
+                app:bar_highlight_color="#808080"
                 app:data_type="_integer"
-                app:left_thumb_color="#1A246D"
-                app:left_thumb_color_pressed="#030B47"
+                app:left_thumb_color="#4E4E4E"
+                app:left_thumb_color_pressed="#272727"
                 app:max_value="1000"
                 app:min_value="1"
                 app:position="left" />
