--- a/app/src/main/res/layout/item_tags_popular.xml
+++ b/app/src/main/res/layout/item_tags_popular.xml
@@ -2,9 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="10dp">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
         android:id="@+id/tag_name"
         android:layout_width="wrap_content"
@@ -20,4 +23,15 @@
         android:gravity="right"
         android:text="10000"
         android:textSize="20sp" />
+    </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#EEEAEAEA"
+            android:layout_weight="0"/>
 </LinearLayout>
+
+
+
+
+
