--- a/app/src/main/res/layout/activity_users_profiles.xml
+++ b/app/src/main/res/layout/activity_users_profiles.xml
@@ -33,15 +33,32 @@
             android:paddingLeft="10sp"
             android:paddingTop="5sp">
 
-            <TextView
-                android:id="@+id/nameTextView"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/nameTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
                 android:textColor="@android:color/black"
                 android:textSize="30sp"
+                android:layout_weight="1"
                 tools:text="name" />
 
+                <ImageView
+                    android:id="@+id/reportUserImage"
+                    android:layout_width="30sp"
+                    android:layout_height="30sp"
+                    android:layout_marginRight="5sp"
+                    android:layout_gravity="end|center_vertical"
+                    android:layout_weight="0"
+                    android:src="@drawable/report_user_icon" />
 
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
