--- a/app/src/main/res/layout/activity_fill_info.xml
+++ b/app/src/main/res/layout/activity_fill_info.xml
@@ -91,4 +91,17 @@
         android:background="@drawable/rounded_button"
         android:text="Register" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        />
+    <ImageView
+        android:layout_width="200sp"
+        android:layout_height="200sp"
+        android:src="@drawable/login_photo"
+        android:layout_weight="0"
+        android:layout_gravity="bottom|center"
+        android:paddingTop="20sp"
+        />
 </LinearLayout>
