--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -125,6 +125,23 @@
         android:layout_gravity="center"
         android:layout_marginTop="10sp"
         android:background="@drawable/rounded_button"
-        android:text="Register" />
+        android:text="Register"
+        >
+
+    </Button>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        />
+    <ImageView
+        android:layout_width="200sp"
+        android:layout_height="200sp"
+        android:src="@drawable/login_photo"
+        android:layout_weight="0"
+        android:layout_gravity="bottom|center"
+        android:paddingTop="20sp"
+        />
 
 </LinearLayout>
